# llm-registry

./: .gitignore  Cargo.toml  cloudbuild-registry.yaml  package-lock.json
.github/workflows/: publish.yml
crates/llm-registry-api/: Cargo.toml
crates/llm-registry-api/src/: routes.rs
crates/llm-registry-benchmarks/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/llm-registry-benchmarks/output/: .gitignore
crates/llm-registry-benchmarks/output/raw/: .gitignore
crates/llm-registry-benchmarks/src/: adapters.rs  io.rs  lib.rs  markdown.rs  result.rs
crates/llm-registry-core/: Cargo.toml
crates/llm-registry-db/: Cargo.toml
crates/llm-registry-server/: Cargo.toml
crates/llm-registry-service/: Cargo.toml
docker/: Dockerfile
plans/: ARCHITECTURE.md  LLM-Registry-Plan.md  REFINEMENT_AND_COMPLETION.md  SPECIFICATION.md  SWARM_EXECUTION_REPORT.md
scripts/: deploy-registry-ruvector.sh
